tests/cases/errors/runtime_call_number.lox
// Only functions (and eventually classes) can be called.
// expect runtime error: Can only call functions and classes.
var x = 1;
x();
